# codex_app

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.githooks/: commit-msg  commit-msg.ps1  pre-commit.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: archive-last-output.yml  auto_ref_fix.yml  codex_ci.yml  guard-fix.yml  guards.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20240207_01_create_auth_tables.py  20240207_02_create_missions_table.py
docs/: CI.md
docs/archives/: README.md  step-04.md
docs/codex/: AGENT.md  PROMPT.backend.step-04.md  PROMPT.backend.step-template.md  PROMPT.frontend.step-template.md  PROMPT.master.md  README.md  SCHEMA.last_output.json  last_output.json  last_output.sample.json  reflections.md  todo_next.md
docs/codex/archive/: ARCHIVE_VIEWER.md  archive_viewer.html
docs/guards/: README.md
docs/roadmap/: README.md  Step-03-health-version.md  step-01.md  step-02.md  step-03.md  step-04.md  step-0N.md
src/app/: __init__.py  main.py  settings.py
tests/: conftest.py  test_archive_step.py  test_auth_api.py  test_db_session.py  test_health.py  test_mission_model.py  test_mission_schemas_validators.py  test_security.py  test_version.py
tools/archive/: make_step_archive.ps1
tools/codex/: archive_last_output.ps1  archive_step.py  archive_to_index_json.ps1  ensure_last_output.ps1  ensure_roadmap_ref.ps1  fix_roadmap_ref.ps1
tools/guards/: commit_guard.ps1  coverage_guard.ps1  policy.toml  policy_guard.ps1  readme_guard.ps1  roadmap_guard.ps1  run_all_guards.ps1  secret_scan.ps1  utils.ps1
(+39 files in other folders)
